--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -215,20 +215,22 @@
         <div class="modal-body">
           <div class="row">
             <div class="col-sm-12">
-              <form action="">
+              <form action="" [formGroup]="transferForm">
                 <div class="form-group">
                   <label>
                     To Address*
                     <p>Transfer token to this account</p>
                   </label>
-                  <input class="form-control" type="text" name="to-add" [(ngModel)]="sendAddr" required="">
+                  <input class="form-control" type="text" name="to-add" [formControl]="sendAddr">
+                  <span *ngIf="sendAddr.invalid && sendAddr.touched" style="color:red;font-size: 11px">Enter address to send tokens</span>
                 </div>
                 <div class="form-group">
                   <label>
                     Number of Tokens*
                     <p>Unique Token Identifier</p>
                   </label>
-                  <input class="form-control" type="text" name="no-token" [(ngModel)]="token" required="">
+                  <input class="form-control" type="text" name="no-token" [formControl]="token">
+                  <span *ngIf="token.invalid && token.touched" style="color:red;font-size: 11px">Enter tokens to send</span>
                 </div>
               </form>
             </div>
@@ -238,7 +240,7 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="form-submit">
-                <button type="submit" class="btn btn-primary btn-lg" data-dismiss="modal" (click)="sendContractToken()">Execute</button>
+                <button type="submit" class="btn btn-primary btn-lg" data-dismiss="modal" [disabled]="transferForm.invalid" (click)="sendContractToken()">Execute</button>
               </div>
             </div>
           </div>
