--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -177,7 +177,7 @@
     					</a>
             </div>
             <div class="box-wrapper">
-              <a (click)="connectToMongo()">
+              <a (click)="getRedeemBalance()">
     						<div class="box-heading">
     							<span class="box-icon">
     								<img src="assets/images/advance-icon.png">
