--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -18,11 +18,11 @@ ul {
 
 body {
   font-family: 'Roboto', sans-serif;
-  color: #777;
+  color: #333;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.4;
-  background: #162f60;
+  background: #2f5596;
 }
 
 .clearfix:after {
@@ -32,25 +32,48 @@ body {
   clear: both;
 }
 
-a:focus{
+a:focus {
   outline: none;
+}
+
+/*=================== Scrollbar ==================*/
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #162f60;
+  border: 2px solid #b4c6e7;
 }
 
 /*===================== Web Header Wrapper =====================*/
 .webheader-wrapper {
   padding: 10px 0;
+  width: 100%;
+  display: block;
+  background: #162f60;
+}
+
+.webheader-wrapper .row {
+  display: flex;
 }
 
 .logo-wrapper a {
-  display: flex;
   text-decoration: none;
+  display: block;
   color: #fff;
 }
 
 .logo-wrapper a img {
-  display: inline-block;
-  max-width: 100px;
-  max-height: 100px;
+  display: block;
+  margin: 0 auto;
 }
 
 .logo-inner {
@@ -61,28 +84,41 @@ a:focus{
   justify-content: center;
 }
 
-.logo-inner h2 {
+.logo-inner h4 {
+  margin-bottom: 0;
+  text-transform: uppercase;
+}
+
+.logo-inner h5 {
   margin: 0;
+  text-transform: uppercase;
+}
+
+.menu-upper-part h1 {
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 50px;
+}
+
+.menu-wrapper {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
 }
 
 .menu-wrapper ul {
-  text-align: right;
+  text-align: center;
   margin-top: 20px;
 }
 
 .menu-wrapper ul li {
   display: inline-block;
-  padding: 0 10px;
-  border-right: 1px solid #fff;
-}
-
-.menu-wrapper ul li:last-child {
-  border: none;
 }
 
 .menu-wrapper ul li a {
   display: inline-block;
-  padding: 5px 20px;
+  padding: 5px 10px;
   text-decoration: none;
   color: #fff;
   text-transform: uppercase;
@@ -197,166 +233,317 @@ a:focus{
 /*=================== Body Wrapper =======================*/
 .body-wrapper {
   position: relative;
+  overflow: hidden;
 }
 
-.homesec {
-  min-height: calc(100vh - 99px);
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 9;
+section {
   padding: 30px 0;
 }
 
-.homesec:before {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.7);
-  display: block;
-  z-index: 8;
-  content: "";
+.home-body {
+  background: #b4c6e7;
 }
 
-.banner-quote {
-  text-align: center;
-  font-size: 25px;
-  color: #fff;
-  letter-spacing: 2px;
-  position: relative;
-  z-index: 9;
-}
-
-.banner-quote p span {
-  text-transform: uppercase;
-}
-
-.banner-button-wrapper {
-  position: relative;
-  z-index: 9;
-}
-
-.banner-button {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.banner-button a {
-  width: 60%;
-  padding: 10px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  white-space: normal;
-}
-
-section.map-wrapper {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
-  height: 100%;
-  z-index: 0;
-}
-
-/*======================= Service Page ===========================*/
-.header-wrapper {
-  padding: 10px 0;
-}
-
-.header-title h1 {
-  color: #fff;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-}
-
-.page-title-wrapper p {
-  color: #fff;
-  text-align: center;
-  margin: 0;
-  letter-spacing: 1px;
-}
-
-.sec1 {
-  padding: 20px 0;
-}
-
-.service-menu-wrapper a {
-  text-decoration: none;
-  display: block;
-  margin: 10px 0;
-}
-
-.service-menu-inner {
-  background: #fff;
-  min-height: 130px;
-  text-align: center;
+.banner-sec {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-radius: 8px;
-  padding: 0 30px;
-  font-size: 18px;
-  color: #777;
 }
 
-.service-menu-inner span {
+.banner-link-wrapper a {
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  color: #fff;
+  background: #162f60;
+  padding: 20px;
+  position: relative;
+  transition: all 500ms ease;
+  top: 0px;
+  margin: 10px 0;
+  min-height: 140px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.banner-link-wrapper a:hover {
+  top: -10px;
+}
+
+.banner-link-wrapper a h2 {
   text-transform: uppercase;
 }
 
-.heading h3 {
+.banner-link-wrapper p {
+  text-align: center;
+  font-weight: 700;
+}
+
+.banner-quote p {
+  text-align: center;
+  font-size: 25px;
+  text-transform: capitalize;
+  letter-spacing: 2px;
+  margin-top: 30px;
+}
+
+.section-heading {
+  display: flex;
+  justify-content: space-around;
+  background: #162f60;
+  margin-bottom: 10px;
+}
+
+.section-heading h2 {
+  margin: 0;
   color: #fff;
+  padding: 10px;
+}
+
+.section-content {
+  padding: 20px;
+  background: #fff;
+  text-align: justify;
+}
+
+.section-image img {
+  display: block;
+  margin: 0 auto;
+}
+
+.section-content ul,
+.box-wrapper ul {
+  list-style-type: decimal;
+  padding-left: 20px;
 }
 
 .box-wrapper {
+  background: #162f60;
+  padding: 10px;
   margin: 10px 0;
+  color: #fff;
 }
 
-.box-wrapper a {
+.box-heading {
+  text-align: center;
+}
+
+.box-content h3 {
+  display: inline-block;
+  margin: 15px auto 10px;
+  border-bottom: 1px solid #fff;
+}
+
+.box-image img {
+  display: block;
+  margin: 0 auto;
+}
+
+/*======================= Common Page ===========================*/
+aside.left-part {
+  margin: 0 -15px 0;
+  padding: 15px 0 9999px;
+  margin-bottom: -9999px;
+  position: relative;
+}
+
+.right-part {
+  min-height: calc(100vh - 100px);
+  padding: 15px 0;
+}
+
+.left-menu-wrapper {
+  margin-top: 30px;
+}
+
+.left-menu-wrapper .navbar {
+  border: 0;
+}
+
+.left-menu-wrapper ul {
+  width: 100%;
+  margin: 0;
+}
+
+.left-menu-wrapper ul li {
+  display: block;
+  width: 100%;
+}
+
+.left-menu-wrapper ul li a {
   display: block;
   text-decoration: none;
-  color: inherit;
+  padding: 15px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #fff;
+  font-weight: 700;
+  text-align: center;
+}
+
+.left-menu-wrapper .nav>li>a:focus,
+.left-menu-wrapper .nav>li>a:hover {
+  background: none;
+}
+
+.section-wrapper {
+  border: 1px solid #000;
+  margin-bottom: 10px;
   background: #fff;
-  padding: 20px;
-  border-radius: 8px;
+}
+
+h2.section-title {
+  text-align: center;
+  margin-top: 0;
+  text-transform: uppercase;
+  background: black;
+  padding: 10px;
+  color: #fff;
+}
+
+.section-wrapper p {
+  text-align: justify;
+  padding: 0 10px;
+}
+
+h4.demo-note {
+  text-align: center;
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.demo-wrapper a {
+  display: block;
+  margin: 0 auto;
+  text-transform: capitalize;
+  padding: 10px;
+  background: #000;
+  color: red;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 700;
+  transition: all 0.5s ease;
+  margin-bottom: 10px;
+}
+
+.section-wrapper .table-responsive {
+  padding: 10px;
+}
+
+.section-wrapper table thead tr th {
+  text-align: center;
+}
+
+.section-wrapper table tbody tr {
   cursor: pointer;
 }
 
-.box-heading span {
-  display: inline-block;
-  max-width: 35px;
+.bottom-link-wrapper {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 10px;
 }
 
-.box-heading span img {
-  width: 100%;
+.bottom-link-wrapper a {
   display: block;
-  object-fit: cover;
+  padding: 10px 0;
+  width: 170px;
+  text-decoration: none;
+  color: #fff;
+  background: #000;
+  text-align: center;
 }
 
-.box-heading h4 {
-  display: inline-block;
-  vertical-align: top;
+.contract-detail-wrapper table thead,
+.fees-wrapper table thead,
+.podbal-wrapper table thead {
+  background: #000;
+  color: #fff;
+}
+
+.contract-detail-wrapper table thead tr th,
+.fees-wrapper table thead tr th,
+.podbal-wrapper table thead tr th {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.contract-detail-wrapper table tbody,
+.fees-wrapper table tbody,
+.podbal-wrapper table tbody {
+  background: #fff;
+}
+
+.contract-detail-wrapper table tbody tr td:first-child,
+.fees-wrapper table tbody tr td:first-child,
+.podbal-wrapper table tbody tr td:first-child {
+  font-weight: bold;
+}
+
+.fees-wrapper table tbody tr td,
+.podbal-wrapper table tbody tr td {
+  height: 40px;
+}
+
+.asset-wrapper h4 {
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  background: #000;
+  padding: 10px;
   margin: 0;
-  text-transform: uppercase;
-  padding-left: 10px;
-  letter-spacing: 1px;
-  color: #162f60;
-}
-
-.bottom-button-wrapper {
-  margin: 20px 0;
-}
-
-.bottom-button-wrapper a {
-  padding: 15px 30px;
-  font-weight: 600;
   font-size: 16px;
-  text-transform: uppercase;
-  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-bottom-width: 2px;
 }
+
+.asset-inner {
+  min-height: 161px;
+  background: #fff;
+  margin-bottom: 20px;
+}
+
+.pop-links {
+  display: flex;
+  flex-direction: row;
+}
+
+.external-link-wrapper,
+.interact-link-wrapper {
+  background: #a9d18e;
+  padding: 0 0 10px;
+  margin: 10px;
+}
+
+.interact-link-wrapper {
+  background: #b4c6e7;
+}
+
+.external-link-wrapper h3,
+.interact-link-wrapper h3 {
+  text-align: center;
+  color: #fff;
+  background: #000;
+  margin: 0;
+  padding: 10px;
+  text-transform: uppercase;
+}
+
+.external-link-wrapper a,
+.interact-link-wrapper a {
+  display: block;
+  text-decoration: none;
+  padding: 10px;
+  color: inherit;
+  text-align: center;
+  margin: 5px auto;
+  width: 200px;
+  background: #fff;
+}
+
 
 /*========================== Modal CSS ============================*/
 
@@ -369,19 +556,20 @@ section.map-wrapper {
   padding: 10px 0px;
 }
 
-.modal-header button.close {
+.modal-body button.close {
   width: 30px;
   height: 30px;
   border-radius: 50%;
   background: #162f60;
   color: #fff;
   opacity: 1;
-  line-height: 25px;
-  text-align: center;
+  position: absolute;
+  right: -20px;
+  top: -15px;
 }
 
-.modal-header button.close:focus{
-  outline:none;
+.modal-header button.close:focus {
+  outline: none;
 }
 
 .modal-header h2 {
@@ -389,33 +577,37 @@ section.map-wrapper {
   text-transform: uppercase;
 }
 
-.modal-header p {
+.modal-body {
+  padding: 15px;
+}
+
+#buy-pop h3:first-child,
+#redeem-pop h3:first-child,
+#transfer-pop h3:first-child,
+#approve-pop h3:first-child {
+  text-transform: uppercase;
+}
+
+.modal-body h3 {
+  margin-top: 0px;
+  background: #000;
+  padding: 5px;
+  color: #fff;
+}
+
+.modal-body .form-group label {
   margin: 0;
+  text-transform: uppercase;
 }
 
-.modal-body{
-  padding: 15px 0;
+.modal-body .form-group span.input-group-addon {
+  font-weight: bold;
+  background: transparent;
 }
 
-.modal-body .form-group label p,.modal-body .form-group label span {
-  font-weight: normal;
-  font-size: 14px;
+.form-submit {
+  text-align: right;
 }
-
-.modal-body .form-group .form-control {
-  padding: 10px !important;
-  font-size: 16px;
-  height: auto;
-}
-
-.modal-footer {
-  padding: 0px;
-  border: 0px;
-}
-
-/*.form-submit {
-  text-align: left;
-}*/
 
 .form-submit button {
   padding: 10px 20px;
@@ -423,32 +615,29 @@ section.map-wrapper {
   letter-spacing: 1px;
 }
 
-.btn-primary.focus, .btn-primary:focus,.btn-primary:active:focus{
+.btn-danger.focus,
+.btn-danger:focus,
+.btn-danger:active:focus {
   outline: none;
 }
 
-#redeem-pop .modal-header ,#buy-pop .modal-header {
-  border: none;
-}
-
-#redeem-pop .modal-body ,#buy-pop .modal-body {
-  margin-top: -20px;
-}
-
-#redeem-pop h3:first-child ,#buy-pop h3:first-child{
-  margin-top: 0;
-}
-
-.redeem-fee span {
-  float: right;
-  font-weight: normal;
-}
-
 /*========================= Media Queries =============================*/
-@media (max-width:991px) {
-  .menu-wrapper ul li a{
-    padding: 0 10px;
+@media (min-width:768px) {
+  .menu-wrapper ul {
+    display: block !important;
+    height: auto !important;
+    margin-top: 20px !important;
   }
+
+  .modal-dialog {
+    width: 700px;
+  }
+}
+
+@media (max-width:991px) {
+  /*.menu-wrapper ul li a {
+    padding: 0 10px;
+  }*/
 }
 
 @media (max-width:767px) {
@@ -457,7 +646,7 @@ section.map-wrapper {
   }
 
   .menu-wrapper {
-  text-align: right;
+    text-align: right;
   }
 
   .mobile-trigger {
@@ -494,7 +683,7 @@ section.map-wrapper {
     display: block;
   }
 
-  .menu-wrapper ul li:last-child a{
+  .menu-wrapper ul li:last-child a {
     border: 0;
   }
 
@@ -504,6 +693,10 @@ section.map-wrapper {
 
   .header-title h1 {
     font-size: 20px;
+  }
+
+  .pop-links {
+    display: block;
   }
 }
 
