--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
                     <li><a routerLink="/home" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
                     <li><a routerLink="/common/pod" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Pod</a></li>
                     <li><a routerLink="/common/pom" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Pom</a></li>
-                    <li><a>Faq</a></li>
+                    <li><a style="pointer-events: none" routerLink="/common/customer" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">Faq</a></li>
                     <li><a >Contact</a></li>
                   </ul>
                 </nav>
