--- a/EllypinCustomer/src/app/pod/pod.component.html
+++ b/EllypinCustomer/src/app/pod/pod.component.html
@@ -41,7 +41,7 @@
               <div class="bottom-link-wrapper">
                 <a style="cursor: pointer;" (click)="getMetamask()">Get MetaMask</a>
                 <a href="javascript:void(0);">Get Hardware Wallet</a>
-                <a href="javascript:void(0);">MyEtherScan</a>
+                <a href="https://ropsten.etherscan.io/address/0x24f5c1b5159c9f643d09358f08fd5b4447a2797e" target="_blank">MyEtherScan</a>
               </div>
             </div>
           </div>
