--- a/EllypionAdmin/src/app/admin/admin.component.html
+++ b/EllypionAdmin/src/app/admin/admin.component.html
@@ -2,11 +2,10 @@
   <div class="container-fluid">
     <div class="button-inner">
       <ul>
-        <!-- <li><a href="#" data-toggle="modal" data-target="#login-pop">Secure Log In</a></li> -->
-        <li><a>Custodian Ui</a></li>
-        <li><a>Home</a></li>
+        <li><a href="#">Admin Ui</a></li>
+        <li><a href="#">Home</a></li>
       </ul>
-    </div>  
+    </div>
   </div>
 </div>
 
@@ -14,7 +13,7 @@
   <div class="container-fluid">
     <div class="body-inner">
       <div class="row">
-        <div class="col-md-2 col-sm-12">
+        <div class="col-md-2 col-sm-2">
           <aside class="left-part">
             <div class="logo-wrapper">
               <a href="home.html">
@@ -40,7 +39,7 @@
             </div>
           </aside>
         </div>
-        <div class="col-md-10 col-sm-12">
+        <div class="col-md-10 col-sm-10">
           <div class="right-part rightOuter">
             <div class="contract-detail-wrapper">
               <div class="table-responsive">
@@ -111,25 +110,29 @@
                   <table class="table table-bordered text-center">
                     <thead>
                       <tr>
-                        <th colspan="2">Fees</th>
+                        <th colspan="3">Fees</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
+                        <td></td>
+                        <td>Variable %</td>
+                        <td>Fixed</td>
+                      </tr>
+                      <tr>
                         <td>Transfer</td>
-                        <td><input type="text" [(ngModel)]="transferFees" class="form-control"></td>
+                        <td>0</td>
+                        <td>2</td>
                       </tr>
                       <tr>
                         <td>Redeem</td>
-                        <td><input type="text" readonly [(ngModel)]="fees" class="form-control"></td>
+                        <td>0.10%</td>
+                        <td></td>
                       </tr>
                       <tr>
                         <td>Buy</td>
-                        <td><input type="text" [(ngModel)]="buyFees" class="form-control"></td>
-                      </tr>
-                      <tr class="noBorder">
-                        <td></td>
-                        <td><button class="btn btn-primary btn-sm" style="float:right" (click)="saveFees()">Save</button></td>
+                        <td>0</td>
+                        <td>5</td>
                       </tr>
                     </tbody>
                   </table>
@@ -138,8 +141,8 @@
               <div class="col-sm-4 asset-wrapper">
                 <h4>Asset Account Balance</h4>  
                 <div class="asset-inner">
-                  <input type="text" [(ngModel)]="assetBalance" name="" class="form-control">
-                  <button class="btn btn-primary btn-sm" style="float:right" (click)="saveFees()">Save</button>
+                  <input type="text" name="" readonly [(ngModel)]="assetBalance" class="form-control">
+                  <button class="btn btn-primary btn-sm">Save</button>
                 </div>
               </div>
               <div class="col-sm-4 podbal-wrapper">
@@ -175,13 +178,81 @@
           </div>
         </div>
       </div>
+
+      <div class="row redeem-section">
+        <div class="col-sm-2 col-xs-12">
+          <div class="opheading">
+            <h2>REDEEM</h2>
+          </div>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <h3>Raw Message from MongoDB</h3>
+          <div class="table-responsive">
+            <table class="table table-striped table-bordered text-center">
+              <thead>
+                <tr>
+                  <th>Serial No</th>
+                    <th>Name & Address</th>
+                    <th>Email</th>
+                    <th>Token to Redeem</th>
+                    <th>Fees</th>
+                    <th>Public Key</th>
+                    <th>Bank</th>
+                    <th>Account Number</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr style="cursor: pointer" (click)="redeemClicked(i)" *ngFor="let obj of redeemMessageDisplay;let i=index">
+                  <td>{{i+1}}</td>
+                  <td>{{obj.redeemBeneficiary}}</td>
+                  <td>{{obj.redeemEmail}}</td>
+                  <td>{{obj.redeemToken}}</td>
+                  <td>{{obj.redeemFee}}</td>
+                  <td>{{obj.publicKey}}</td>
+                  <td>{{obj.redeemBank}}</td>
+                  <td>{{obj.redeemAccountNumber}}</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <div class="col-sm-6 col-xs-12" *ngIf="redeemObjectSet.redeemBank">
+          <h3>Admin UI</h3>
+          <div class="table-responsive redeem-wrapper">
+            <table class="table table-striped table-bordered text-center" id="podtable">
+              <thead>
+                <tr>
+                  <th>Serial No</th>
+                  <th>Pods Received</th>
+                  <th>Custodian Paid?</th>
+                  <th>KYC Yes</th>
+                  <th>burn</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                    <td>1.</td>
+                    <td><input type="text" [(ngModel)]="redeemObjectSet.kyc" class="form-control"></td>
+                    <td>{{redeemObjectSet.redeemCustodian}}</td>
+                    <td><input type="text" [(ngModel)]="redeemObjectSet.kyc" class="form-control"></td>
+                    <td><input type="text" [(ngModel)]="redeemObjectSet.burn" class="form-control"></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="button-wrapper">
+            <button class="btn btn-primary" (click)="updateRedeemObject()">Update</button>
+          </div>
+        </div>
+      </div>
+
       <div class="row buy-section">
         <div class="col-sm-2 col-xs-12">
           <div class="opheading">
             <h2>BUY</h2>
           </div>
         </div>
-        <div class="col-sm-5 col-xs-12">
+        <div class="col-sm-4 col-xs-12">
           <h3>Raw Message from MongoDB</h3>
           <div class="table-responsive">
             <table class="table table-striped table-bordered text-center">
@@ -199,118 +270,45 @@
               </thead>
               <tbody>
                 <tr style="cursor: pointer" (click)="buyClicked(i)" *ngFor="let obj of buyMessageDisplay;let i=index">
-                    <td>{{i+1}}</td>
-                    <td>{{obj.buyFirstName+' '+obj.buyLastName}}</td>
-                    <td>{{obj.buyEmail}}</td>
-                    <td>{{obj.buyToken}}</td>
-                    <td>{{obj.buyFee}}</td>
-                    <td>{{obj.publicKey}}</td>
-                    <td>{{obj.buyBank}}</td>
-                    <td>{{obj.buyAddress}}</td>
+                  <td>{{i+1}}</td>
+                  <td>{{obj.buyFirstName+' '+obj.buyLastName}}</td>
+                  <td>{{obj.buyEmail}}</td>
+                  <td>{{obj.buyToken}}</td>
+                  <td>{{obj.buyFee}}</td>
+                  <td>{{obj.publicKey}}</td>
+                  <td>{{obj.buyBank}}</td>
+                  <td>{{obj.buyAddress}}</td>
                 </tr>
               </tbody>
             </table>
           </div>
         </div>
-        <div class="col-sm-5 col-xs-12" *ngIf="buyObjectSet.buyFirstName">
-          <h3>Custodian UI</h3>
+        <div class="col-sm-6 col-xs-12" *ngIf="buyObjectSet.name">
+          <h3>Admin UI</h3>
           <div class="table-responsive buy-wrapper">
             <table class="table table-striped table-bordered text-center" id="podtable">
               <thead>
                 <tr>
                   <th>Serial No</th>
-                  <th>Name</th>
-                  <th>Amount Received</th>
-                  <th>update Account balance</th>
-                  <th>KYC</th>
+                  <th>Customer Public Key</th>
+                  <th>Amount Received by Custodian</th>
+                  <th>KYC Yes</th>
+                  <th>Mint And Assign</th>
                 </tr>
               </thead> 
               <tbody>
                 <tr>
-                    <td>1</td>
-                    <td>{{buyObjectSet.buyFirstName}}</td>
-                    <td><input type="text" [(ngModel)]="buyObjectSet.SEND_TOKEN_REQUEST.receivedAmount" class="form-control"></td>
-                    <td><input type="text" [(ngModel)]="buyObjectSet.SEND_TOKEN_REQUEST.updateBalance" class="form-control"></td>
-                    <td><input type="text" [(ngModel)]="buyObjectSet.KYC" readonly class="form-control"></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div class="button-wrapper">
-            <button class="btn btn-primary" (click)="updateBuyObject()">Update</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="row redeem-section">
-        <div class="col-sm-2 col-xs-12">
-          <div class="opheading">
-            <h2>REDEEM</h2>
-          </div>
-        </div>
-        <div class="col-sm-4 col-xs-12">
-          <h3>Raw Message from MongoDB</h3>
-          <div class="table-responsive">
-            <table class="table table-striped table-bordered text-center">
-              <thead>
-                <tr>
-                    <th>Serial No</th>
-                    <th>Name & Address</th>
-                    <th>Email</th>
-                    <th>Token to Redeem</th>
-                    <th>Fees</th>
-                    <th>Public Key</th>
-                    <th>Bank</th>
-                    <th>Account Number</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr style="cursor: pointer" (click)="redeemClicked(i)" *ngFor="let obj of redeemMessageDisplay;let i=index">
-                    <td>{{i+1}}</td>
-                    <td>{{obj.redeemBeneficiary}}</td>
-                    <td>{{obj.redeemEmail}}</td>
-                    <td>{{obj.redeemToken}}</td>
-                    <td>{{obj.redeemFee}}</td>
-                    <td>{{obj.publicKey}}</td>
-                    <td>{{obj.redeemBank}}</td>
-                    <td>{{obj.redeemAccountNumber}}</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-        <div class="col-sm-6 col-xs-12" *ngIf="redeemObjectSet.redeemBank">
-          <h3>Custodian UI</h3>
-          <div class="table-responsive redeem-wrapper">
-            <table class="table table-striped table-bordered text-center" id="podtable">
-              <thead>
-                <tr>
-                  <th>Serial No</th>
-                  <th>Bank Name</th>
-                  <th>Swift</th>
-                  <th>Bank Account No</th>
-                  <th>Beneficiary</th>
-                  <th>Amount to pay</th>
-                  <th>KYC</th>
-                  <th>update Account balance</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
                     <td>1.</td>
-                    <td>{{redeemObjectSet.redeemBank}}</td>
-                    <td>{{redeemObjectSet.redeemSwiftCode}}</td>
-                    <td>{{redeemObjectSet.redeemAccountNumber}}</td>
-                    <td>{{redeemObjectSet.redeemBeneficiary}}</td>
-                    <td><input type="text" [(ngModel)]="redeemObjectSet.BURN_TOKEN_REQUEST.redeemAmount" class="form-control"></td>
-                    <td><input type="text" [(ngModel)]="redeemObjectSet.KYC" readonly class="form-control"></td>
-                    <td><input type="text" [(ngModel)]="redeemObjectSet.BURN_TOKEN_REQUEST.assetBalance" class="form-control"></td>
+                    <td>{{buyObjectSet.publicKey}}</td>
+                    <td>{{buyObjectSet.}}</td>
+                    <td><input type="text" [(ngModel)]="buyObjectSet.kyc" class="form-control"></td>
+                    <td>&nbsp;</td>
                 </tr>
               </tbody>
             </table>
           </div>
           <div class="button-wrapper">
-            <button class="btn btn-primary" (click)="updateRedeemObject()">Update</button>
+            <button class="btn btn-primary" (click)="updateBuyMessage()">Update</button>
           </div>
         </div>
       </div>
@@ -318,7 +316,7 @@
   </div>
 </div>
 
-<div class="modal fade" id="login-pop" role="dialog" data-backdrop="static">
+<div class="modal fade" id="login-pop" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
